# MasterApi

./: .env.template  .gitignore  README.md  alembic.ini  dockerfile  pyproject.toml
backend/core/: builder.py  initializer.py  module_loader.py
backend/core/cache/: redis_manager.py
backend/modules/: __init__.py
backend/modules/auth/: module.py
backend/modules/auth_game_state/: __init__.py
backend/modules/servers/: routing.py
backend/modules/users/: module.py  routing.py
backend/shared/depends/: __init__.py  common.py  from_core.py
backend/shared/enum/: common.py  status.py
backend/shared/interfaces/: __init__.py  module.py  task.py
backend/shared/logs/: formatters.py
backend/shared/schemas/: jwt.py
backend/shared/utils/: secret_keys.py
logs/: readme.md  readme.txt
secret/: readme.md  readme.txt
src/: main.py
src/core/: __init__.py  initializer.py
src/core/database/: alchemy_manager.py
src/core/settings/: settings_provider.py
src/modules/api_core/: module.py
src/modules/auth/: __init__.py  routing.py
src/modules/auth_game_state/: module.py  routing.py
src/modules/servers/: __init__.py  module.py
src/modules/users/: __init__.py
src/shared/: project_path.py
src/shared/crud/: user.py
src/shared/depends/: jwt_validator.py
src/shared/enum/: __init__.py  server.py  user.py
src/shared/interfaces/: manager.py
src/shared/logs/: handlers.py
src/shared/models/: __init__.py  custom_type.py  mixin.py  model.py
src/shared/utils/: __init__.py  cookie.py
tests/: conftest.py
utils/alembic/: env.py
(+46 files in other folders)
